<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimage"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/shutterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        style="@style/ShutterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoholder" />
    <androidx.cardview.widget.CardView
        android:id="@+id/photoholder"
        app:cardCornerRadius="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="120dp"
        android:layout_height="120dp">
        <ImageView
            android:id="@+id/snap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/download"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/contents"
        app:layout_constraintTop_toBottomOf="@id/shutterButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/LinearBoxTmargin"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextView"
            android:id="@+id/title_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name_bar" />
        <EditText
            android:inputType="text"
            android:id="@+id/title"
            style="@style/Editbox"
            android:hint="@string/Name_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/Name_bar" />

        <TextView
            style="@style/TextView"
            android:id="@+id/about_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Wish_bar" />
        <EditText
            style="@style/Editbox"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4"
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_about_him"
            android:autofillHints="@string/enter_about_him" />
        <TextView
            style="@style/TextView"
            android:id="@+id/Phoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>
        <EditText
            style="@style/Editbox"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="enter phone number" />

        <Button
            android:id="@+id/email"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email_BTn" />

        <Button
            style="@style/Button"
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Share_Btn" />

        <Button
            style="@style/Button"
            android:id="@+id/opengc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opengc" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>